# C-CPP-Projects

./: Run  Run_All_Projects
Computational-App/: Run
Computational-App/Source/: CMakeLists.txt
Computational-App/Source/Calculator/: calc.c
Computational-App/Source/Carmichael_Numbers/: Carmichael.c
Computational-App/Source/Happy_Primes/: happypr.c
Computational-App/Source/Valid_Emails_Check/: Validemails.c
Hanoi-Simulation/: Run
Hanoi-Simulation/Hanoi/: CMakeLists.txt
Hanoi-Simulation/Hanoi/Include/: Stack.h  TStoixeioyStoivas.h
Hanoi-Simulation/Hanoi/data_input/: Results.txt  Test1_AktinaYpsos.txt  Test2_AktinaYpsos.txt  Test3_AktinaYpsos.txt  Test4_AktinaYpsos.txt  Test5_AktinaYpsos.txt
Hanoi-Simulation/Hanoi/src/: Hanoi.c  Stack.c  TStoixeioyStoivas.c
Matrix-Max-Summary/: Run
Matrix-Max-Summary/MaxSum/: CMakeLists.txt
Matrix-Max-Summary/MaxSum/Include/: HeaderMatrixMalloc.h  HeaderMaximum.h  Headerfunctions.h  Headersolve.h
Matrix-Max-Summary/MaxSum/src/: MatrixMalloc.c  functions.c  main.c  max.c  solve.c
Network_Graph/include/: Visualization_Funcrions.h  Weight_Graph.h
Network_Graph/source/: Weight_Graph.c  main.c
Object-Example-Simulation/: Run
Object-Example-Simulation/Object_Ball_Simulation/: CMakeLists.txt
Object-Example-Simulation/Object_Ball_Simulation/Include/: Ball_Class.h  Basketball_Class.h  Game_class.h  Ping-Pongball_Class.h  Tennisball_Class.h
Smart_ptr-Factory-Listener_Pattern-Lambdas-exp/: Factrory_Pattern.cpp  Smart_ptr-Fac-List_P-L.cpp
Telephone-List/: Run
Telephone-List/List/: CMakeLists.txt
(+10 files in other folders)
